# yoz

./: Cargo.toml  LICENSE.Apache-2.0  LICENSE.MIT  README.md
.github/workflows/: main.yml  pr.yml  release.yml
.github/workflows/yoz/.github/workflows/: main.yml  pr.yml  release.yml
checks/: Cargo.toml
src/: add.rs  background.rs  checks.rs  config.rs  dotfiles.rs  install.rs  launch.rs  license.rs  main.rs  new.rs  screen.rs  shot.rs  update.rs  workflow.rs
templates/: apache  mit  xtask_workspace_toml
templates/ci/: release_build  release_build_with_strip  release_end  release_start  release_step  test  test_and_lint
templates/configs/: cargo-temp  i3  i3status  nvim  starship
templates/licenses/: apache  mit
